infra/adguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 80
        - containerPort: 53
          protocol: UDP 
        - containerPort: 53
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-conf
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-pvc 
      - name: adguard-conf
        persistentVolumeClaim:
          claimName: adguard-pvc
