infra/knative-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knative-operator
  namespace: knative-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      dash: knative-operator
  template:
    metadata:
      labels:
        dash: knative-operator
    spec:
      securityContext:
        runAsNonRoot: false
      containers:
      - name: knative-operator
        image: ko.local/github.com/knative/operator/cmd/operator:v1.13.0
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN", "SYS_ADMIN"]
