infra/knative-net-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knative-net-traefik
  namespace: knative-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knative-net-traefik
  template:
    metadata:
      labels:
        app: knative-net-traefik
    spec:
      containers:
      - name: knative-net-traefik
        image: gcr.io/knative-releases/knative.dev/net-traefik/cmd/controller:v1.13.0
