infra/adguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: default
spec:
  selector:
    app: adguard-home
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: ui
  type: ClusterIP
